# cpp-for-high-perf

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
cpp_for_high_perf/: __init__.py
examples/: test.py
python/: bindings.cpp
